--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
     --r-sm: 10px;
     --r-md: 14px;
     --r-lg: 18px;
+
+    /* Canales RGB para blends */
+    --verde-impacto-rgb: 52,71,32;
+    --verde-organico-rgb: 150,186,86;
+    --celeste-rgb: 155,203,213;
+    --cafe-rgb: 150,106,86;
   }
 
   /* Base */
@@ -111,48 +117,50 @@
     .menu.open{ display:flex; }
   }
 
-  /* =================== HERO =================== */
+  /* =================== HERO (sin manchas blancas) =================== */
   .gs-header{
     position:relative; color:#fff; text-align:center;
     padding:120px 22px 108px; margin:-22px -22px 0; overflow:hidden; min-height:78vh;
     isolation:isolate;
+    /* FONDO BASE para evitar flashes/blancos en el blend */
+    background-color:#233017;   /* verde muy oscuro */
   }
-  .gs-hero-bg{ position:absolute; inset:0; z-index:0; }
+  .gs-hero-bg{
+    position:absolute; inset:0; z-index:0;
+    /* Fondo oscuro por si hay gaps entre imágenes */
+    background-color:#233017;
+  }
   .gs-hero-bg img{
     position:absolute; inset:0; width:100%; height:100%; object-fit:cover;
     opacity:0; transition:opacity 900ms ease;
     filter:saturate(1.06) contrast(1.06) brightness(1.02);
     pointer-events:none;
+    /* Para Safari: evita halos al mezclar */
+    will-change: opacity;
   }
   .gs-hero-bg img.is-active{ opacity:1; }
 
-  /* Color grading real (no simple transparencia) */
-  :root{
-    --verde-impacto-rgb: 52,71,32;
-    --verde-organico-rgb: 150,186,86;
-    --celeste-rgb: 155,203,213;
-    --cafe-rgb: 150,106,86;
-  }
+  /* Color grading (sin blancos), encapsulado dentro del header */
   .gs-hero-bg::before{
     content:""; position:absolute; inset:0; z-index:1; pointer-events:none;
     background:
-      radial-gradient(1200px 700px at 72% 32%, rgba(var(--celeste-rgb),.18) 0%, rgba(var(--celeste-rgb),0) 60%),
+      radial-gradient(1200px 700px at 72% 32%, rgba(var(--celeste-rgb),.16) 0%, rgba(var(--celeste-rgb),0) 60%),
       linear-gradient(115deg,
-        rgba(var(--verde-impacto-rgb), .62) 0%,
-        rgba(var(--verde-organico-rgb), .34) 48%,
-        rgba(var(--celeste-rgb), .22) 100%
+        rgba(var(--verde-impacto-rgb), .58) 0%,
+        rgba(var(--verde-organico-rgb), .32) 48%,
+        rgba(var(--celeste-rgb), .20) 100%
       );
     mix-blend-mode:multiply;
   }
   .gs-hero-bg::after{
     content:""; position:absolute; inset:0; z-index:2; pointer-events:none;
-    background: linear-gradient(180deg, rgba(0,0,0,.06) 0%, rgba(var(--cafe-rgb), .12) 100%);
+    background: linear-gradient(180deg, rgba(0,0,0,.08) 0%, rgba(var(--cafe-rgb), .10) 100%);
     mix-blend-mode:soft-light;
   }
-  /* Vignette */
+  /* Vignette sin blancos */
   .gs-header::after{
     content:""; position:absolute; inset:-10%; z-index:3; pointer-events:none;
-    background: radial-gradient(62% 58% at 50% 56%, rgba(0,0,0,0) 0%, rgba(0,0,0,.14) 72%, rgba(0,0,0,.28) 100%);
+    background: radial-gradient(62% 58% at 50% 56%, rgba(0,0,0,0) 0%, rgba(0,0,0,.14) 72%, rgba(0,0,0,.26) 100%);
   }
   .gs-header .gs-container{ position:relative; z-index:4; }
 
@@ -183,12 +191,6 @@
   .btn-primary:hover{ background:var(--verde-organico-700); transform:translateY(-2px); box-shadow:0 12px 36px rgba(150,186,86,.45); }
   .btn-ghost{ background: rgba(255,255,255,.08); color:#fff; border:1px solid rgba(255,255,255,.28); }
   .btn-ghost:hover{ background: rgba(255,255,255,.14); transform:translateY(-2px); }
-
-  /* Onda separadora */
-  .wave-sep{
-    display:block; width:100%; height:56px; margin-top:40px;
-  }
-  .wave-sep svg{ width:100%; height:100%; display:block; }
 
   /* =================== SECCIONES =================== */
   .gs-section{ padding:84px 22px; margin:0 -22px; }
@@ -356,6 +358,19 @@
     .gs-hero-bg img{ transition:none !important; }
     *{ transition:none !important; }
   }
+
+  /* ===== Fallback si el navegador NO soporta mix-blend-mode ===== */
+  @supports not (mix-blend-mode: multiply){
+    .gs-hero-bg::before{
+      background: linear-gradient(135deg,
+        rgba(var(--verde-impacto-rgb), .50) 0%,
+        rgba(var(--verde-organico-rgb), .32) 45%,
+        rgba(var(--celeste-rgb), .22) 100%
+      );
+      mix-blend-mode: normal;
+    }
+    .gs-hero-bg::after{ display:none; }
+  }
   </style>
 </head>
 <body>
@@ -394,13 +409,6 @@
         href="mailto:gr3ensolutions@gmail.com?subject=Consulta%20sobre%20servicios%20de%20Green%20Solutions&body=Hola%20Green%20Solutions%2C%0D%0AMe%20gustar%C3%ADa%20informaci%C3%B3n%20sobre%3A%20[tema]%0D%0AUbicaci%C3%B3n%3A%20%0D%0ATel%C3%A9fono%3A%20"
         class="btn btn-primary">Contáctanos</a>
       <a href="#servicios" class="btn btn-ghost">Ver servicios</a>
-    </div>
-
-    <!-- Separador en onda -->
-    <div class="wave-sep" aria-hidden="true">
-      <svg viewBox="0 0 1440 120" preserveAspectRatio="none">
-        <path fill="#ffffff" d="M0,96L60,85.3C120,75,240,53,360,53.3C480,53,600,75,720,80C840,85,960,75,1080,69.3C1200,64,1320,64,1380,64L1440,64L1440,120L1380,120C1320,120,1200,120,1080,120C960,120,840,120,720,120C600,120,480,120,360,120C240,120,120,120,60,120L0,120Z"/>
-      </svg>
     </div>
   </div>
 </header>
@@ -715,4 +723,3 @@
 </script>
 </body>
 </html>
-
