--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
   </div>
   <div class="gs-container">
     <span class="eyebrow">Consultoría agrícola & ambiental</span>
-    <h1>Soluciones sostenibles con rigor técnico</h1>
+    <h1>Soluciones sostenibles con rigor técnico y científico</h1>
     <p>Impulsamos la productividad y resiliencia de sistemas agrícolas y territoriales mediante ciencia aplicada, SIG/teledetección y gestión eficiente de suelos y agua.</p>
     <div class="cta-row">
       <a
